# crc_prefixer

./: CMakeLists.txt  README.md
doc/: 01_intro.md  CMakeLists.txt  doxygen.conf.in
src/: CMakeLists.txt  crc.cpp  crc.h  main.cpp
